Search toggle hover pixel jump fixed

--- a/responsive.css
+++ b/responsive.css
@@ -73,7 +73,7 @@
 	.toggle-search { background: none; border: 0; width: auto; position: absolute; left: 10px; top: -44px; z-index: 103; color: #333; margin: 0; padding: 8px 12px; }
 	.toggle-search:focus { box-shadow: none; }
 	.toggle-search:hover,
-	.toggle-search.active { background: transparent; color: #333; padding-top: 10px; padding-bottom: 10px; }
+	.toggle-search.active { background: transparent; color: #333; padding-top: 8px; padding-bottom: 10px; }
 	.search-expand { top: -1px; left: 0; width: 100%; padding: 0; }
 	.search-expand-inner { padding: 0; width: 100%; }
 	.search-expand .themeform.searchform div input { border-radius: 0; padding: 12px 22px 12px 60px; }
